Wed Jan  9 11:55:54 2002  Nicola Pero  <n.pero@mi.flashnet.it>

	* configure.in: Call AC_CONFIG_AUX_DIR with
	$GNUSTEP_SYSTEM_ROOT/Makefiles arg so that gnustep-make's
	config.guess and config.sub are used.
	* configure: Regenerated.
	* config.guess: Removed.
	* config.sub: Removed.
	* install-sh: Removed.
	* mkinstalldirs: Removed.
	* Source/mframe/configure.in: Set AC_CONFIG_AUX_DIR to
	$GNUSTEP_SYSTEM_ROOT/Makefiles.
	* Source/mframe/configure: Regenerated.
	* Source/mframe/config.guess: Removed.
	* Source/mframe/config.sub: Removed.
	
Wed Jan  9 11:08:57 2002  Nicola Pero  <n.pero@mi.flashnet.it>

	* config.guess: Updated to latest version.
	* config.sub: Idem.
	
2002-01-08  Richard Frith-Macdonald <rfm@gnu.org>

	* Tools/AGSHtml.h:
	* Tools/AGSHtml.m:
	* Tools/AGSIndex.h:
	* Tools/AGSIndex.m:
	* Tools/AGSOutput.h:
	* Tools/AGSOutput.m:
	* Tools/AGSParser.h:
	* Tools/AGSParser.m:
	* Tools/autogsdoc.m:
	* Tools/gsdoc-0_6_7.dtd:
	Updated for several changes ...
	Support documentation of instance variables
	Index class and category method names identically
	Extend index to have a listing of methods by unit
	Extend index to have a listing of ivariablese by class
	Use new extensions to double speed of generation of method
	indexes for classes.

2002-01-07  Adam Fedor  <fedor@gnu.org>

	* Version: 1.1.0
	* Documentation/news.texi: Update

	* Source/NSObject.m (GSGetValue): Add case for void return
	(suggestion from ml@sbuilders.com).

	* Resources/Languages/Dutch: Change currency to Euro.
	* Resources/Languages/French: Likewise.
	* Resources/Languages/German: Likewise.
	* Resources/Languages/Italian: Likewise.
	* Old languages files renamed to *.Old

2002-01-07  Richard Frith-Macdonald <rfm@gnu.org>

	* Tools/AGSHtml.m: Minor speedup.
	* Tools/AGSOutput.m: Put something in place of empty descriptions.
	* Tools/AGSParser.m: Rewrite handling of standards information to fix
	bug in NO_GNUSTEP handling.
	* Source/GNUmakefile: Don't document concrete number stuff ... not