@@ -1,3 +1,9 @@
+2002-01-10  Richard Frith-Macdonald <rfm@gnu.org>
+
+	* Source/NSDistributedNotificationCentre.m: Use NSHost user default
+	to determine which server to connect to.
+	* Tools/AGSParser.m: Minor parsing fixes ... correct GS_EXPORT
+
 Wed Jan  9 11:55:54 2002  Nicola Pero  <n.pero@mi.flashnet.it>
 
 	* configure.in: Call AC_CONFIG_AUX_DIR with
